# communicado

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  README-hacking.md  README.md
lib/tftpack/: CMakeLists.txt
lib/tftpack/include/tftpack/: constants.h  send.h
lib/tftpack/src/: send.c
lib/tftpd/: CMakeLists.txt
lib/tftpd/include/tftpd/: err.h  server.h
lib/tftpd/src/: server.c
lib/tftpd/src/server/: poll.c  poll.h
tftpd/: .gitignore  CMakeLists.txt  args.c  args.h  cli.c  cli.h  config.h.in  server.c  server.h  tftpd.c
